# From-Code-to-Cloud-The-Evalution-of-Todo

./: .dockerignore  .eslintignore  .gitignore  .prettierignore  CLAUDE.md  README.md  blockage_report.md  blockage_report_frontend_testing.md  blockage_report_overall.md  implementation_status_report.md  main.py  package-lock.json  pyproject.toml  pytest.ini  temp_req.txt  test.db  tmpclaude-4634-cwd
.claude/: settings.local.json
.claude/agents/: cli-engineer.md  fullstack-architect.md  mcp-architect.md  ui-ux-engineer.md
.claude/skills/: fullstack.md  mcp-agent-architecture.md  modern-ui-ux.md  python-cli-expert.md
.gemini/: GEMINI.md  settings.json
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  database.py  main.py  pyproject.toml  requirements.txt  run.py  tmpclaude-be90-cwd  validate_chat.py  verify_db.py
backend/agent/: runner.py
backend/api/: chat.py
backend/app/: auth_schemas.py  config.py  crud.py  database.py  main.py  middleware.py  models.py  schemas.py
backend/app/api/endpoints/: auth.py  chat.py  tasks.py  users.py
backend/app/tools/: __init__.py  base.py  registry.py  task_tools.py
backend/data/: database.py
backend/db/: chat_service.py
backend/docs/: chat_history_usage.md
backend/mcp/: tools.py
backend/models/: __init__.py
backend/src/api/: deps.py
backend/src/api/v1/: auth.py  chat.py  tasks.py  tasks_simple.py
backend/src/config/: settings.py
backend/src/db/: chat_service.py
backend/src/models/: base.py  conversation.py  task.py  user.py
backend/src/schemas/: __init__.py  task.py  token.py
backend/src/services/: auth.py  task_service.py
backend/tests/: conftest.py  integration_test.py  test_chat.py  test_chat_conftest.py
data/: tasks.json
from_code_to_cloud_the_evolution_of_todo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
frontend/: .env.example  README.md  i18n-routing.ts  i18n.ts  middleware.ts  migrate.js  migrate.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/messages/: en.json  ur.json
frontend/pages/: dashboard.tsx  index.tsx  login.tsx
frontend/styles/: globals.css
history/adr/: 001-authentication-and-state-management.adr.md
specs/001-cli-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-interactive-menu-mode/: spec.md  user-stories.md
specs/001-phase1-todo-app/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/002-interactive-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-interactive-terminal-menu/: spec.md  user-stories.md
specs/003-full-stack-web-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: todo.py
tests/: test_api_tasks.py  test_cli.py  test_crud.py  test_interactive_menu.py  test_models.py  test_service.py  test_storage.py
(+284 files in other folders)
