[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "from-code-to-cloud-the-evolution-of-todo"
version = "0.1.0"
description = "A terminal-based todo list manager"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "rich>=14.2.0",
    "typer>=0.20.0",
    "questionary>=2.0.0",
    "pyfiglet>=1.0.4",
    "sqlmodel>=0.0.27",
    "httpx>=0.28.1",
]

[project.scripts]
todo = "src.todo:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv.workspace]
members = ["backend"]
